#	$Id$	

Changelog since HylaFAX 4.3.0

* Avoid problems when resending single ECM Frame (5 Jul 2005)
* Improve recovery after Class 1 TCF receipt times out (4 Jul 2006)
* Improve the handling of user aborts in Class 1 sending (4 Jul 2006)
* Add missing From: headers to notify (4 Jul 2006)
* correct CIELAB to be ITULAB (4 Jul 2006)
* fix Class 2 data format parsing of +FIS response (4 Jul 2006)
* Enhance faxinfo with formating options (2 Jul 2006)
* Fix faxmail's handling of nested mime (14 Jun 2006)
* Add JobProtection option to hfaxd (12 Jun 2006)
* Enhance SHIELDED_DTMF (5 Jun 2006)
* Add resubmit capability to faxalter (2 Jun 2006)
* Use ] && [ instead of -a for shell portability (2 Jun 2006)
* Add continuation support to FaxClient in libfaxutil (31 May 2006)
* Add UseJobTagLine config option for faxsend  (4 Apr 2006)

Changelog for HylaFAX 4.3.0

* Fix DCS tag handling in Class2 (BUG 771) (5 May 2006)
* Fix hfaxd corruption on killed jobs (BUG 401) (5 May 2006)
* More fixes to batching and jobcontrol interaction (3 May 2006)
* Re-work fix for hfaxd's time handling (BUG 723) (28 Apr 2006)
* Don't let users kill each other's jobs (BUG 752) (28 Apr 2006)
* Use areBatchable() to make sure batching doesn't ignore job
  modems (28 Apr 2006)
* Enhance Italian translation (BUG 758) (26 Apr 2006)
* Fix faxq sleepq concurrency problem (BUG 745) (26 Apr 2006)
* Fix runSchedule() concurrency problem (BUG 745) (26 Apr 2006)
* Fix some of the error paths in the setReadyToRun jobcontrol 
  pipe, fork, and exec calls (BUG 745) (25 Apr 2006)
* Fix unblocking job problem (BUG 733) (24 Apr 2006)
* back out flush modem I/O (BUG 756) (24 Apr 2006)
* Make sure hfaxd returns JBIG faxes in recvq list (BUG 731) (23 Apr 2006)
* Resolve Solaris bus error under native compiler (BUG 769) (23 Apr 2006)
* Fix quoted-printable MIME encoding in faxrcvd (BUG 760) (21 Apr 2006)
* Fix sendfax to accept both destination and user subaddresses
  (BUG 762) (21 Apr 2006)